profile info padding + background color

--- a/client/src/app/users/profile/profile-info/profile-info.component.scss
+++ b/client/src/app/users/profile/profile-info/profile-info.component.scss
@@ -1,7 +1,13 @@
+.profile-info-container {
+  background-color: #fffde2;
+  padding: 15px 0 15px 0;
+
+}
+
 .profile-card {
   max-width: 300px;
   align-self: center;
-  margin: 0 auto;
+  margin: 0 auto 10px auto;
 }
 
 .profile-navbar {
