--- a/client/src/app/posts/all-posts/all-posts.component.scss
+++ b/client/src/app/posts/all-posts/all-posts.component.scss
@@ -1,3 +1,7 @@
+.main {
+  background-color: #fffde2;
+}
+
 @media only screen and (max-width: 400px) {
   .posts-list {
     width:100% !important;
