--- a/client/src/app/comments/create-comment/create-comment.component.html
+++ b/client/src/app/comments/create-comment/create-comment.component.html
@@ -1,7 +1,7 @@
 <div class="create-post-container">
   <form [formGroup]="this.createCommentForm" (ngSubmit)="this.createComment(this.createCommentForm.value)">
-    <mat-form-field>
-      <input matInput placeholder="Add comment" required formControlName="content">
+    <mat-form-field appearance="outline" class="comment-form">
+      <textarea matInput placeholder="Add comment" required formControlName="content"></textarea>
       <mat-error *ngIf="!!this.createCommentForm.controls.content.errors?.required">
         Some content is required!
       </mat-error>
