--- a/client/src/app/posts/all-posts/all-posts.component.scss
+++ b/client/src/app/posts/all-posts/all-posts.component.scss
@@ -10,6 +10,11 @@
     grid-template-columns: 1fr !important;
     grid-gap: 10px;
   }
+
+  .one-post {
+    width: 100% !important;
+    margin-bottom: 0px !important;
+  }
 }
 
 @media only screen and (min-width: 401px) and (max-width: 650px) {
@@ -26,7 +31,17 @@
   .posts-list {
     grid-template-columns: 1fr 1fr !important;
   }
+
 }
+
+
+  .one-post {
+    width: 85%;
+    margin-bottom: 15px;
+  }
+
+
+
 
 .welcome-text {
   font-family: sans-serif;
