--- a/client/src/app/components/header/header.component.scss
+++ b/client/src/app/components/header/header.component.scss
@@ -1,3 +1,7 @@
+.menu-bar{
+  margin-bottom: 10px;
+}
+
 .sidenav-container {
   height: 100%;
 }
@@ -9,6 +13,7 @@
 
 .toolbar {
   background-image: url('./../../../assets/horizon.jpg');
+  margin-bottom: 10px;
 }
 
 .logo {
