gap with other components (background) fixed

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,6 +1,11 @@
 @import '@angular/material/prebuilt-themes/deeppurple-amber.css';
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 
+html {
+  height: 100%;
+  background-color: #fffde2;
+}
+
 body {
   margin: 0;
 }
