--- a/client/src/app/users/register/register.component.html
+++ b/client/src/app/users/register/register.component.html
@@ -56,7 +56,7 @@
         </mat-form-field>
         <br /><br />
 
-        <button mat-raised-button color="primary" type="submit" [disabled]="this.registerForm.invalid">Register</button>
+        <button mat-button class="register-button" type="submit" [disabled]="this.registerForm.invalid">Register</button>
 
       </form>
 
