single comments now look better

--- a/client/src/app/comments/single-comment/single-comment.component.html
+++ b/client/src/app/comments/single-comment/single-comment.component.html
@@ -39,7 +39,7 @@
     <mat-card *ngIf="this.isCommentForUpdate === true">
       <form [formGroup]="this.updateCommentForm"
       (ngSubmit)="this.onUpdateComment(this.updateCommentForm.value)">
-        <mat-form-field appearance="outline">
+        <mat-form-field appearance="outline" class="form-container">
           <textarea matInput placeholder="Write new comment here" required
           [value]="this.commentToShow.content" formControlName="content" class="comment-form"></textarea>
           <mat-error *ngIf="!!this.updateCommentForm.controls.content.errors?.required">
