--- a/client/src/app/posts/single-post-comments/single-post-comments.component.scss
+++ b/client/src/app/posts/single-post-comments/single-post-comments.component.scss
@@ -1,12 +1,11 @@
 .post-info-container {
   text-align: center;
   background-color: #fffde2;
-  margin-top: -8px;
+  margin-top: -10px;
   padding-top: 10px;
 }
 
 .single-post-container{
-
   margin: 0 auto;
 }
 
@@ -15,7 +14,12 @@
     margin-top: 10px;
     max-width: 50%;
   }
+}
 
+.header {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .post-texts {
