--- a/client/src/app/users/profile/profile-info/profile-info.component.html
+++ b/client/src/app/users/profile/profile-info/profile-info.component.html
@@ -1,19 +1,22 @@
 <div class='profile-info-container'>
 
   <mat-card class='profile-card'>
-    <mat-card-header>
-      <div mat-card-avatar></div>
+    <mat-card-header class="username">
       <mat-card-title>{{profile.username}}</mat-card-title>
     </mat-card-header>
     <img mat-card-image class="example-header-image" [src]="this.profile.avatarURL">
     <mat-card-actions *ngIf="this.profile.isOwner">
-      <button mat-button (click)="this.openDialogEditProfile()">Edit profile</button>
-      <button mat-button (click)="this.confirmDelete()">Delete profile</button>
+      <div class="left">
+      <button mat-button class="button" (click)="this.openDialogEditProfile()">Edit profile</button>
+      </div>
+      <div class="right">
+      <button mat-button class="button" (click)="this.confirmDelete()">Delete profile</button>
+      </div>
     </mat-card-actions>
 
-    <mat-card-actions *ngIf="!this.profile.isOwner">
-      <button mat-button *ngIf="!this.profile.isFollowed" (click)="this.onClickFollowUnfollow(true)">Follow</button>
-      <button mat-button *ngIf="this.profile.isFollowed" (click)="this.onClickFollowUnfollow(false)">Unfollow</button>
+    <mat-card-actions *ngIf="!this.profile.isOwner" class="follow-unfollow">
+      <button mat-button class="button" *ngIf="!this.profile.isFollowed" (click)="this.onClickFollowUnfollow(true)">Follow</button>
+      <button mat-button class="button" *ngIf="this.profile.isFollowed" (click)="this.onClickFollowUnfollow(false)">Unfollow</button>
     </mat-card-actions>
   </mat-card>
 
