--- a/client/src/app/users/profile/profile-info/profile-info.component.scss
+++ b/client/src/app/users/profile/profile-info/profile-info.component.scss
@@ -2,13 +2,35 @@
   background-color: #fffde2;
   padding: 15px 0 15px 0;
   margin-top: -10px;
+}
 
+.username {
+  text-align: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .profile-card {
   max-width: 300px;
   align-self: center;
   margin: 0 auto 10px auto;
+}
+
+.left {
+  float: left;
+}
+
+.right {
+  text-align: right;
+}
+
+.button {
+  background-color: rgb(152, 198, 251);
+}
+
+.follow-unfollow {
+  text-align: center;
 }
 
 .profile-navbar {
