--- a/client/src/app/shared/components/single-post-in-list/single-post-in-list.component.html
+++ b/client/src/app/shared/components/single-post-in-list/single-post-in-list.component.html
@@ -1,20 +1,15 @@
 <div *ngIf="(this.postToShow)" class="post-info-container">
   <div class="single-post-in-list-container" post="post.title">
     <mat-card>
-
         <mat-card-header class="text-above" style="cursor: pointer;" [routerLink]="['/users', this.postToShow.author.id]" >
             <img mat-card-avatar
             [src]="this.postToShow.author.avatarURL"
             style="cursor: pointer;"
             class='profile-avatar'>
             <mat-card-title>{{this.postToShow.author.username}}</mat-card-title>
-            <mat-card-subtitle>{{this.postToShow.title}}</mat-card-subtitle>
+            <mat-card-subtitle class="post-title">{{this.postToShow.title}}</mat-card-subtitle>
           </mat-card-header>
-
       <img class='post-image' src="{{this.postToShow.imageURL}}" (click)="this.openSinglePost()" style="cursor: pointer;">
-      <div class="post-item">
-
-      </div>
       <mat-card-actions>
       <button mat-icon-button (click)="this.onLikePost()">
         <i class="material-icons">
