--- a/client/src/app/users/profile/profile-gallery/profile-gallery.component.scss
+++ b/client/src/app/users/profile/profile-gallery/profile-gallery.component.scss
@@ -3,8 +3,8 @@
 }
 
 .one-post{
-  width: 80% ;
-  margin-bottom: 20px;
+  width: 85% ;
+  margin-bottom: 15px;
 }
 
 @media only screen and (max-width: 400px) {
@@ -14,6 +14,11 @@
     display: grid;
     grid-template-columns: 1fr !important;
     grid-gap: 10px;
+  }
+
+  .one-post{
+    width: 100% !important;
+    margin-bottom: 2px !important;
   }
 }
 
@@ -39,7 +44,6 @@
 }
 
 .posts-list {
-
   width:70%;
   margin: 0 auto;
   display: grid;
