--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -20,7 +20,8 @@
           </mat-icon>
         </button>
         <span class="spacer"></span>
-        <img class="logo" style="cursor:pointer;" src="./../../../assets/logo-draft.png" [routerLink]="['home']">
+
+        <img class="logo" style="cursor:pointer;" src="./../../../assets/logo_brand.png" [routerLink]="['home']">
         <span class="spacer"></span>
         <span class="spacer"></span>
         <span *ngIf="!(isHandset | async)!.matches">
