fixing single post view on mobile

--- a/client/src/app/posts/all-posts/all-posts.component.scss
+++ b/client/src/app/posts/all-posts/all-posts.component.scss
@@ -33,15 +33,17 @@
     grid-template-columns: 1fr 1fr !important;
   }
 
-}
+  .one-post {
+    width: 100% !important;
+    margin-bottom: 0px !important;
+  }
 
+}
 
   .one-post {
     width: 85%;
     margin-bottom: 15px;
   }
-
-
 
 
 .welcome-text {
