--- a/client/src/app/posts/single-post-comments/single-post-comments.component.html
+++ b/client/src/app/posts/single-post-comments/single-post-comments.component.html
@@ -1,4 +1,5 @@
 <div *ngIf="(this.post)" class="post-info-container">
+  <div class='post-and-tool-container'>
   <div class="single-post-container" post="post.title">
     <mat-card>
 
@@ -31,11 +32,13 @@
     </mat-card>
   </div>
 
+  <div class='update-tool'>
   <mat-card [style.display]="this.isPostForUpdate === true ? 'inherit' : 'none' ">
     <app-update-post
     (toUpdatePost)="this.updatePost($event)" [postToUpdate]="this.post"></app-update-post>
   </mat-card>
-
+</div >
+</div>
 
     <app-all-comments class='comment-section'
     (hasCreatedComment)="this.hasNewComment($event)"
