--- a/client/src/app/posts/single-post-comments/single-post-comments.component.scss
+++ b/client/src/app/posts/single-post-comments/single-post-comments.component.scss
@@ -1,9 +1,23 @@
+
+.post-and-tool-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .post-info-container {
   text-align: center;
   background-color: #fffde2;
   margin-top: -8px;
   padding-top: 10px;
 }
+
+.update-tool {
+  margin-top: 10px !important;
+}
+
+
 
 .single-post-container{
 
@@ -26,3 +40,4 @@
 .post-image {
   max-width: 100%;
 }
+
