--- a/client/src/app/posts/single-post-comments/single-post-comments.component.scss
+++ b/client/src/app/posts/single-post-comments/single-post-comments.component.scss
@@ -15,9 +15,8 @@
 
 .update-tool {
   margin-top: 10px !important;
+  width: 98%;
 }
-
-
 
 .single-post-container{
   margin: 0 auto;
@@ -27,6 +26,11 @@
   .single-post-container {
     margin-top: 10px;
     max-width: 50%;
+  }
+
+  .update-tool {
+    margin-top: 10px !important;
+    width: 50%;
   }
 }
 
