--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -30,7 +30,8 @@ body {
 }
 
 img.source-image {
-  max-height: 70vh !important;
+  max-height: 52vh !important;
+  max-width: 60vh !important;
 }
 
 
@@ -45,15 +46,12 @@ img.source-image {
 @media only screen and (max-width: 380px) {
   .mat-dialog-container {
     min-height: 100vh !important;
-    min-width: 100vw !important;
   }
 }
 
 .mat-dialog-container {
   margin: 0 auto;
   height: fit-content !important;
-  max-height: 90vh;
-  max-width: 70%;
 }
 
 
