--- a/client/src/app/shared/components/create-post/create-post.component.html
+++ b/client/src/app/shared/components/create-post/create-post.component.html
@@ -1,4 +1,4 @@
-<input type="file" (change)="fileChangeEvent($event)" class="upload-btn"/>
+<input type="file" (change)="fileChangeEvent($event)"/>
 
     <image-cropper
         [imageChangedEvent]="imageChangedEvent"
@@ -22,7 +22,7 @@
 
 <div class="create-post-container">
   <form [formGroup]="this.createPostForm" (ngSubmit)="this.createPost(this.createPostForm.value)" class="form">
-    <mat-form-field>
+    <mat-form-field class="title-field">
       <input matInput placeholder="Add title" required formControlName="title">
       <mat-error *ngIf="!!this.createPostForm.controls.title.errors?.required">
         A title is required!
@@ -34,9 +34,9 @@
         The title must be shorter that 60 symbols!
       </mat-error>
     </mat-form-field>
-
-    <mat-form-field>
-      <input matInput placeholder="Add content" required formControlName="content">
+    <br />
+    <mat-form-field appearance="outline" class="textarea">
+      <textarea matInput placeholder="Add content" required formControlName="content"></textarea>
       <mat-error *ngIf="!!this.createPostForm.controls.content.errors?.required">
         Some content is required!
       </mat-error>
