--- a/client/src/app/shared/components/create-post/create-post.component.scss
+++ b/client/src/app/shared/components/create-post/create-post.component.scss
@@ -1,5 +1,10 @@
-.upload-btn{
-    width: 200px;
+.title-field {
+    width: 100%;
+}
+
+.textarea {
+    width: 100%;
+    font-size: 12px;
 }
 
 .create-post-button {
