--- a/client/src/app/shared/components/create-post/create-post.component.html
+++ b/client/src/app/shared/components/create-post/create-post.component.html
@@ -1,4 +1,8 @@
-<input type="file" (change)="fileChangeEvent($event)"/>
+
+<div class="upload-btn-wrapper">
+  <button class="btn">Upload a file</button>
+  <input type="file" name="myfile" (change)="fileChangeEvent($event)"/>
+</div>
 
     <image-cropper
         [imageChangedEvent]="imageChangedEvent"
