--- a/client/src/app/shared/components/confirmation-dialog/confirmation-dialog.component.html
+++ b/client/src/app/shared/components/confirmation-dialog/confirmation-dialog.component.html
@@ -4,11 +4,11 @@
             {{message}}
         </div>
         <div class="buttons" mat-dialog-actions>
-            <button mat-button (click)="onNoClick()">No</button>
-            <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Yes</button>
+            <button mat-button [mat-dialog-close]="true" cdkFocusInitial class='yes-btn'>Yes</button>
+            <button mat-button (click)="onNoClick()" class='no-btn'>No</button>
         </div>
     </div>
-    <div>
-        <img class="image" src="./../../../../assets/shocked-alien.jpg">
+    <div class="image-container">
+        <img  class ="dialog-image"src="./../../../../assets/shocked-alien.jpg">
     </div>
 </div>
